[project]
name = "docshelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-openai>=1.1.6",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.15",
    "pymupdf>=1.26.7",
    "pypdf>=6.4.2",
]
